--- a/vpemaster/templates/speech_logs.html
+++ b/vpemaster/templates/speech_logs.html
@@ -36,10 +36,9 @@
                 <td>{{ log.Name }}</td>
                 <td>
                     {% if log.Pathway and 'Non-Path' not in log.Pathway %}
-                        {# Create the acronym using a Jinja-safe for loop to avoid syntax errors #}
                         {% set initials = [] %}
                         {% for word in log.Pathway.split() %}
-                            {% if initials.append(word[0]) %}{% endif %}
+                            {% set _ = initials.append(word[0]) %}
                         {% endfor %}
                         {{ initials | join('') }}{{ log.Level }}
                     {% endif %}
@@ -57,11 +56,9 @@
                     {% endif %}
                 </td>
                 {% if session.get('user_role') in ['Admin', 'Officer'] %}
-                <td>
-                    <div class="action-links">
-                        <a href="{{ url_for('speech_logs_bp.speech_log_form', log_id=log.id) }}" class="button">Edit</a>
-                        <button class="button delete-btn" onclick="showDeleteModal({{ log.id }})">Delete</button>
-                    </div>
+                <td class="action-links">
+                    <a href="{{ url_for('speech_logs_bp.speech_log_form', log_id=log.id) }}" class="button icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
+                    <button class="button delete-btn icon-btn" onclick="showDeleteModal({{ log.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
                 </td>
                 {% endif %}
             </tr>
