--- a/vpemaster/templates/users.html
+++ b/vpemaster/templates/users.html
@@ -34,8 +34,8 @@
                 <td>{{ user.Date_Created.strftime('%Y-%m-%d') }}</td>
                 <td>
                     <div class="action-links">
-                        <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="button">Edit</a>
-                        <button class="button delete-btn" onclick="showDeleteModal({{ user.id }})">Delete</button>
+                        <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="button icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
+                        <button class="button delete-btn icon-btn" onclick="showDeleteModal({{ user.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
                     </div>
                 </td>
             </tr>
@@ -43,7 +43,6 @@
         </tbody>
     </table>
 
-    <!-- The Delete Confirmation Modal -->
     <div id="deleteModal" class="modal">
         <div class="modal-content">
             <p>Are you sure you want to delete this user?</p>
